# slinky

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  test.ld  test_case.ld  test_case.yaml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: feature_suggestion.yaml  frug_report.yml
.github/workflows/: md_lint.yml  publish_crate.yml
docs/file_format/: README.md  asserts.md  custom_options.md  file.md  files.md  gp_info.md  required_symbols.md  segments.md  settings.md  symbol_assignments.md  vram_classes.md
slinky/: Cargo.toml
slinky-cli/: Cargo.toml
slinky-cli/src/: main.rs
slinky/src/: absent_nullable.rs  assert_entry.rs  dependencies_writer.rs  document.rs  error.rs  escaped_path.rs  file_info.rs  file_kind.rs  gp_info.rs  keep_sections.rs  lib.rs  linker_symbols_style.rs  linker_writer.rs  options.rs  partial_linker_writer.rs  paths_configs.rs  required_symbol.rs  runtime_settings.rs  script_buffer.rs  segment.rs  segment_symbols_style.rs  settings.rs  symbol_assignment.rs  traits.rs  utils.rs  version.rs  vram_class.rs
slinky/tests/: integration_test.rs
src/: linker_writer.rs  main.rs  options.rs  paths_configs.rs  segment.rs  segment_symbols_style.rs
tests/: regen_tests.sh
tests/d_inputs/: drmario64.yaml  groups.yaml
tests/input_files/: archives.yaml  basic_example.yaml  drmario64.yaml  follow_segment.yaml  groups.yaml  hardcoded_gp.yaml  linker_offset.yaml  makerom_zelda_like.yaml  pad_test.yaml  test_case.yaml
tests/linker_scripts/: archives.ld  basic_example.ld  drmario64.ld  follow_segment.ld  hardcoded_gp.ld  linker_offset.ld  makerom_zelda_like.ld  test_case.ld
tests/panics/: file_exclude_if_all_empty.yaml  file_exclude_if_any_empty.yaml  file_include_if_all_empty.yaml  file_include_if_any_empty.yaml  gp_info_and_hardcoded.yaml  gp_info_section_is_missing.yaml  kind_offset_no_name.yaml  kind_pad_no_amount.yaml  kind_pad_no_section.yaml  missing_target_path_for_d.yaml  non_existing_file_member.yaml  non_existing_segment_member.yaml  non_existing_setting.yaml  non_existing_toplevel.yaml  null_path.yaml  pad_amount_non_kind_pad.yaml  path_kind_pad.yaml  section_non_kind_pad.yaml  segment_exclude_if_all_empty.yaml  segment_exclude_if_any_empty.yaml  segment_include_if_all_empty.yaml  segment_include_if_any_empty.yaml  segment_keep_sections_absent.yaml  segment_keep_sections_null.yaml  symbol_assignment_exclude_if_all_empty.yaml  symbol_assignment_exclude_if_any_empty.yaml  symbol_assignment_include_if_all_empty.yaml  symbol_assignment_include_if_any_empty.yaml
tests/partial_linking/: follow_segment.d  follow_segment.h  follow_segment.ld  follow_segment.list  follow_segment.yaml  required_syms.ld  required_syms.yaml  undefined_syms.ld  undefined_syms.yaml  vram_classes.h  vram_classes.ld  vram_classes.yaml
tests/test_cases/: archives.ld  archives.yaml  basic_example.ld  conditional_includes.ld  conditional_includes.yaml  drmario64.d  drmario64.ld  drmario64.yaml  fixed_symbol.ld  fixed_symbol.yaml  follow_segment.ld  follow_segment.yaml  groups.d  groups.ld  groups.yaml  hardcoded_gp.h  hardcoded_gp.ld  hardcoded_gp.list  hardcoded_gp.yaml  hit_and_run.d  hit_and_run.ld  hit_and_run.yaml  linker_offset.ld  makerom_zelda_like.h  makerom_zelda_like.ld  makerom_zelda_like.yaml  null_sections.h  null_sections.ld  pad_test.ld  (+16 more)
(+38 files in other folders)
