# SPDX-FileCopyrightText: © 2024 decompals
# SPDX-License-Identifier: MIT

[package]
name = "slinky-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
regex = "1.10.5"
slinky = { path = "../slinky", version = "0.1.0" }
