# SPDX-FileCopyrightText: © 2024 decompals
# SPDX-License-Identifier: MIT

[package]
name = "slinky-cli"
version = "0.3.0"
edition = "2021"
rust-version = "1.74.1"
authors = ["Anghelo Carvajal <angheloalf95@gmail.com>"]
license = "MIT"
description = "Linker script generator for decompilation and modding projects"
repository = "https://github.com/decompals/slinky"

keywords = ["linker_script", "generator", "decompilation", "cli"]
categories = ["development-tools::build-utils", "command-line-utilities"]

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
regex = "1.10.5"
slinky = { path = "../slinky", version = "0.3.0" }
