# SPDX-FileCopyrightText: © 2024 decompals
# SPDX-License-Identifier: MIT

[package]
name = "slinky"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version="1.0.197", features = ["derive"]}
serde_yaml = "0.9.32"
thiserror = "1.0.57"
