# SPDX-FileCopyrightText: © 2024-2026 decompals
# SPDX-License-Identifier: MIT

[package]
name = "slinky"
version = "0.4.0"
edition = "2021"
rust-version = "1.66.0"
authors = ["Anghelo Carvajal <angheloalf95@gmail.com>"]
license = "MIT"
description = "Linker script generator for decompilation and modding projects"
repository = "https://github.com/decompals/slinky"

keywords = ["linker_script", "generator", "decompilation"]
categories = ["development-tools::build-utils"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9.32"
thiserror = "1.0.57"
indexmap = "2.2.6"

[dev-dependencies]
rstest = "0.18.2"
